fix: graph visibility, audio file, palette and transparency

--- a/src/shared/styles/_main.css
+++ b/src/shared/styles/_main.css
@@ -64,6 +64,13 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  background-color: transparent !important;
+}
+
+body,
+html {
+  overflow: hidden;
+  background-color: transparent !important;
 }
 
 .projector::after {
